# semi-columnar-array

./: LICENSE  README.rst
project/: BGAF 3_1 106 W64-L5_4_7_2025 4_39_36 PM_Vd=1V(-2.5,3.5).csv  BGAF 3_1 106 W64-L6_4_7_2025 4_41_30 PM_Vd=1V(-2.5,3.5).csv  BGAF 3_1 203 W36-L8_4_7_2025 4_20_05 PM_Vd=1V(-2.5,3.5).csv  BGAF 3_1 206 W64-L10_4_7_2025 4_52_44 PM_Vd=1V(-2.5,3.5).csv  BGAF 3_1 206 W64-L5_4_7_2025 4_46_35 PM_Vd=1V(-2.5,3.5).csv  BGAF 3_1 206 W64-L6_4_7_2025 4_48_53 PM_Vd=1V(-2.5,3.5).csv  BGAF 3_1 206 W64-L8_4_7_2025 4_50_50 PM_Vd=1V(-2.5,3.5).csv  BGAF 3_1 303 W36-L4_4_7_2025 4_24_39 PM_Vd=1V(-2.5,3.5).csv  BGAF 3_1 303 W36-L5_4_7_2025 4_26_36 PM_Vd=1V(-2.5,3.5).csv  BGAF 3_1 303 W36-L6_4_7_2025 4_29_03 PM_Vd=1V(-2.5,3.5).csv  BGAF 3_1 303 W36-L8_4_7_2025 4_30_59 PM_Vd=1V(-2.5,3.5).csv  BGAF 3_1 306 W64-L4_4_7_2025 4_55_20 PM_Vd=1V(-2.5,3.5).csv  BGAF 3_1 306 W64-L5_4_7_2025 4_57_54 PM_Vd=1V(-2.5,3.5).csv  BGAF 3_1 306 W64-L6_4_7_2025 4_59_54 PM_Vd=1V(-2.5,3.5).csv  BGAF 3_1 306 W64-L8_4_7_2025 5_01_56 PM_Vd=1V(-2.5,3.5).csv  CMakeLists.txt  README.rst  benchmark.py  plot_b1500.py
project/include/: B1500Parser.hpp  ColumnarArray.hpp  SemiColumnarEngine.hpp
project/src/: wrapper.cpp
project/tests/: test_engine.py  test_kernel.cpp
